--- a/src/app/pages/Administrar-sistema/referencias/referencias.component.css
+++ b/src/app/pages/Administrar-sistema/referencias/referencias.component.css
@@ -118,6 +118,26 @@ th {
   color: white;
 }
 
+.btn-outline-success {
+  border-color: #28a745;
+  color: #28a745;
+}
+
+.btn-outline-success:hover {
+  background-color: #28a745;
+  color: white;
+}
+
+.btn-outline-danger {
+  border-color: #dc3545;
+  color: #dc3545;
+}
+
+.btn-outline-danger:hover {
+  background-color: #dc3545;
+  color: white;
+}
+
 .back-section {
   margin-bottom: 20px;
 }
