--- a/src/app/Modals/crear-corresponsal/crear-corresponsal.component.html
+++ b/src/app/Modals/crear-corresponsal/crear-corresponsal.component.html
@@ -10,7 +10,7 @@
   </div>
     <!-- Modal Header -->
     <div class="modal-header">
-      <h5 class="modal-title">Nuevo Proveedor o corresponsal</h5>
+      <h5 class="modal-title">Nuevo Corresponsal</h5>
       <button type="button" class="btn-close" (click)="closeModal()">
         <i class="fas fa-times"></i>
       </button>
